updated inside header

--- a/password-protected.html
+++ b/password-protected.html
@@ -31,12 +31,14 @@
                 <div class="main-slider">
                     <div class="col-md-12 private-nav">
                         <img src="images/private-nav.png" class="img-responsive center-block">
-                        <div class="">
-                            <a href="#services">WHERE & WHEN</a>
+                        <div class="left-nav">
                             <a href="#features">RSVP</a>
                             <a href="#faq">FAQ</a>
-                            <a href="#beach">PHOTOS</a>
                             <a href="#team">WHO'S WHO</a>
+                        </div>
+                        <div class="right-nav">
+                            <a href="#services">WHERE & WHEN</a>
+                            <a href="#beach">PHOTOS</a>
                         </div>
                     </div>
                 </div>
