updated outside header, added skip intro link

--- a/index.html
+++ b/index.html
@@ -29,14 +29,11 @@
 <body>
     <section>
         <div class="container">
-            <div class="row">
-                <div class="col-sm-12">
-                    <img src="images/adventures-of-ben-and-cola.png" class="img-responsive center-block">
+            <div class="row padding-bottom intro-image">
+                <img src="images/adventures-of-ben-and-cola.png" class="img-responsive center-block">
+                <div class="skip-intro">
+                    <a href="inside.html">Skip Intro</a>
                 </div>
-                <div class="timeline-date text-center">
-                    <a href="inside.html" class="btn btn-common uppercase">Continue to Site</a>
-                </div>
-                <div class="timeline-divider overflow padding-bottom"></div>
             </div>
         </div>
     </section>
