--- a/inside.html
+++ b/inside.html
@@ -30,21 +30,21 @@
     <section id="private">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
-                    <div id="passwordForm">
-                        <form onsubmit="return false;">
-                            <label>Password:</label>
-                            <input type="password" id="password" type="text">
-                            <button id="formBtn">Submit</button>
-                        </form>
-                    </div>
+                <img src="images/modal.png" class="img-responsive center-block padding-top">
 
-                    <div id="display" ></div>
+                <div id="passwordForm">
+                    <form onsubmit="return false;">
+                        <label></label>
+                        <input type="password" id="password" type="text">
+                        <button id="formBtn" class="btn btn-primary">ENTER</button>
+                    </form>
                 </div>
             </div>
         </div>
     </section>
     <!--/#private-->
+
+    <div id="display" ></div>
 
     <div class="container rsvp">
         <script type="text/javascript" src="http://app.rsvpify.com/embed/500065827"></script>
