--- a/password-protected.html
+++ b/password-protected.html
@@ -435,7 +435,7 @@
                         <p>The Boathouse at Prospect Park</p>
                         <p>Reception to Follow</p>
                         <p><a href="https://www.google.com/maps/place/Prospect+Park+Boathouse+%2B+Audubon+Center/@40.6608255,-73.9674331,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b13d59e44bb:0x4374a72cee20ff31!8m2!3d40.6608215!4d-73.9652444">101 East Dr, Brooklyn, NY 11225</a></p>
-                        <p>Limited Parking Available Nearby</p>
+                        <p>Parking Available Nearby</p>
                     </div>
                 </div>
             </div>
@@ -446,7 +446,49 @@
     <section id="end">
         <div class="container">
             <div class="row">
-                <img src="images/end.png" class="img-responsive center-block">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                        <li data-target="#myCarousel" data-slide-to="3"></li>
+                        <li data-target="#myCarousel" data-slide-to="4"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src="images/slide-show/20171111_CoBeEShoot_0092.JPG">
+                        </div>
+
+                        <div class="item">
+                            <img src="images/slide-show/20171111_CoBeEShoot_0178.JPG">
+                        </div>
+
+                        <div class="item">
+                            <img src="images/slide-show/20171111_CoBeEShoot_0253.JPG">
+                        </div>
+
+                        <div class="item">
+                            <img src="images/slide-show/20171111_CoBeEShoot_0389.JPG">
+                        </div>
+
+                        <div class="item">
+                            <img src="images/slide-show/20171111_CoBeEShoot_0397.JPG">
+                        </div>
+                    </div>
+
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
