made links open in new tab

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     <div class="timeline-divider overflow padding-bottom"></div>
 
                     <div class="timeline-date text-center">
-                        <a href="inside.html" class="btn btn-common uppercase">Continue to Site</a>
+                        <a href="inside.html" class="btn btn-common uppercase">Guest Login</a>
                     </div>
                 </div>
             </div>
