--- a/password-protected.html
+++ b/password-protected.html
@@ -38,7 +38,7 @@
                         </div>
                         <div class="right-nav">
                             <a href="#services">WHERE & WHEN</a>
-                            <a href="#beach">PHOTOS</a>
+                            <a href="#end">PHOTOS</a>
                         </div>
                     </div>
                 </div>
@@ -72,7 +72,7 @@
                         <p>Cocktails will be served at 6:00pm</p>
                         <p>Dinner at 7:00pm</p>
                         <p>Party ‘till 10:30pm</p>
-                        <p><a href = "https://www.google.com/maps/place/Prospect+Park+Audubon+Center/@40.6608255,-73.9674331,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b13d59e44bb:0x4374a72cee20ff31!8m2!3d40.6608215!4d-73.9652444">101 East Dr, Brooklyn, NY 11225</a></p>
+                        <p><a target="_blank" href = "https://www.google.com/maps/place/Prospect+Park+Audubon+Center/@40.6608255,-73.9674331,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b13d59e44bb:0x4374a72cee20ff31!8m2!3d40.6608215!4d-73.9652444">101 East Dr, Brooklyn, NY 11225</a></p>
                         <p>Parking available nearby</p>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                         <h2>Rehearsal Dinner at Berg’n</h2>
                         <p>Please join us for dinner at 6:00pm on September 22nd at  Berg’n</p>
                         <p>Have a beer and get to know our closest friends, we think you’ll all get along fabulously. Dinner will be served casual cocktail style so you can  get to know to everyone.</p>
-                        <p><a href="https://www.google.com/maps/place/Berg'n/@40.6772614,-73.9593843,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b9f2d36229d:0xcf3837638bf68bc2!8m2!3d40.6772614!4d-73.9571956">899 Bergen St, Brooklyn, NY 11238</a></p>
+                        <p><a target="_blank" href="https://www.google.com/maps/place/Berg'n/@40.6772614,-73.9593843,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b9f2d36229d:0xcf3837638bf68bc2!8m2!3d40.6772614!4d-73.9571956">899 Bergen St, Brooklyn, NY 11238</a></p>
                     </div>
                 </div>
             </div>
@@ -107,9 +107,9 @@
                         </div>
                         <h2>Where Should I Stay?</h2>
                         <p>We’ve held blocks of rooms for a discounted rate at three hotels. The Farfield and Nu Hotels include breakfast and parking available nearby. These rooms will be available to reserve until July 21, 2018 - or until they are all booked, so reserve now: just mention that you are part of the Hodges/Solwitz wedding!</p>
-                        <p><a href="http://cwp.marriott.com/nycbf/shw">The Fairfield Inn Brooklyn</a></p>
-                        <p><a href="https://nuhotelbrooklyn.reztrip.com/ext/promoRate?property=417&mode=b&pm=true&sr=287631&vr=3">The Nu Hotel</a></p>
-                        <p><a href="https://aws.passkey.com/go/HodgesWeddingRoomBlock">The Marriott at Brooklyn Bridge</a></p>
+                        <p><a target="_blank" href="http://cwp.marriott.com/nycbf/shw">The Fairfield Inn Brooklyn</a></p>
+                        <p><a target="_blank" href="https://nuhotelbrooklyn.reztrip.com/ext/promoRate?property=417&mode=b&pm=true&sr=287631&vr=3">The Nu Hotel</a></p>
+                        <p><a target="_blank" href="https://aws.passkey.com/go/HodgesWeddingRoomBlock">The Marriott at Brooklyn Bridge</a></p>
                     </div>
                 </div>
 
@@ -119,7 +119,7 @@
                             <img src="images/gifts.png" alt="">
                         </div>
                         <h2>What About Gifts?</h2>
-                        <p>Most of all we want to party with our amazing friends and family, so, more than anything we consider your presence to be our gift. However, If you would like to give something tangible our registry is <a href="https://www.zola.com/registry/benandcola">here</a></p>
+                        <p>Most of all we want to party with our amazing friends and family, so, more than anything we consider your presence to be our gift. However, If you would like to give something tangible our registry is <a target="_blank" href="https://www.zola.com/registry/benandcola">here</a></p>
                         <p>Please do not bring gifts to the reception, email BenandCola@gmail.com if you need assistance.</p>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                             <img src="images/hash.png" alt="">
                         </div>
                         <h2>What’s the Hashtag?!</h2>
-                        <p><a href="https://www.instagram.com/explore/tags/benandcolasolit/">#BenAndColaSoLit</a></p>
+                        <p><a target="_blank" href="https://www.instagram.com/explore/tags/benandcolasolit/">#BenAndColaSoLit</a></p>
                     </div>
                 </div>
 
@@ -163,7 +163,7 @@
                             <img src="images/questions.png" alt="">
                         </div>
                         <h2>What If I Have Questions?</h2>
-                        <p>Send an email to <a href="mailto:benandcola@gmail.com">BenandCola@gmail.com</a> with any questions you may have and we’ll get back to you as soon as possible.</p>
+                        <p>Send an email to <a target="_blank" href="mailto:benandcola@gmail.com">BenandCola@gmail.com</a> with any questions you may have and we’ll get back to you as soon as possible.</p>
                     </div>
                 </div>
             </div>
@@ -434,7 +434,7 @@
                         <p>September 23, 2018</p>
                         <p>The Boathouse at Prospect Park</p>
                         <p>Reception to Follow</p>
-                        <p><a href="https://www.google.com/maps/place/Prospect+Park+Boathouse+%2B+Audubon+Center/@40.6608255,-73.9674331,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b13d59e44bb:0x4374a72cee20ff31!8m2!3d40.6608215!4d-73.9652444">101 East Dr, Brooklyn, NY 11225</a></p>
+                        <p><a target="_blank" href="https://www.google.com/maps/place/Prospect+Park+Boathouse+%2B+Audubon+Center/@40.6608255,-73.9674331,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b13d59e44bb:0x4374a72cee20ff31!8m2!3d40.6608215!4d-73.9652444">101 East Dr, Brooklyn, NY 11225</a></p>
                         <p>Parking Available Nearby</p>
                     </div>
                 </div>
