updated text for steve

--- a/password-protected.html
+++ b/password-protected.html
@@ -331,7 +331,7 @@
                                     </div>
                                     <div class="person-info">
                                         <h2>Steve Stachurski</h2>
-                                        <p>Ben's College Friend and Roommate & Groomsman</p>
+                                        <p>Ben's College Roommate & Groomsman</p>
                                     </div>
                                 </div>
                             </div>
