made timeline text wider, adjusted text over images, updated some timeline text

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
 
                     <div class="timeline-divider overflow padding-bottom">
-                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -61,7 +61,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6  padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -71,7 +71,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -81,10 +81,10 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6  padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">April 2015</h2>
+                                    <h3 class="post-title bold">April 2015</h3>
                                     <div class="post-bottom overflow">
                                         <span class="post-date pull-left">A big step: Ben asked Cola to move into his place. They spent an afternoon moving her stuff in from across the street.</span>
                                     </div>
@@ -92,7 +92,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -102,18 +102,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6  padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
-                            <div class="single-blog timeline">
-                                <div class="post-content overflow">
-                                    <h2 class="post-title bold">November 2015</h2>
-                                    <div class="post-bottom overflow">
-                                        <span class="post-date pull-left">They take their first true vacation together – a two and a half week adventure to visit Cola's sister Pooja in Hong Kong, then on to tour Japan with Ben's friends.</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -123,7 +112,18 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6  padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                            <div class="single-blog timeline">
+                                <div class="post-content overflow">
+                                    <h3 class="post-title bold">November 2015</h3>
+                                    <div class="post-bottom overflow">
+                                        <span class="post-date pull-left">They take their first true vacation together – a two and a half week adventure to visit Cola's sister Pooja in Hong Kong, then on to tour Japan with Ben's friends.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -133,7 +133,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8 post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -154,7 +154,7 @@
                     </div>
 
                     <div class="timeline-divider overflow padding-bottom">
-                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -164,7 +164,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6  padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -174,7 +174,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -184,10 +184,10 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6  padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">May 2017</h2>
+                                    <h3 class="post-title bold">May 2017</h3>
                                     <div class="post-bottom overflow">
                                         <span class="post-date pull-left">Chihiro takes them hiking on Lake George, to a family cabin where Cola spent her childhood summers.</span>
                                     </div>
@@ -195,17 +195,17 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8 post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
-                                        They attend Ben’s cousin, Seth and Melissa’s beautiful wedding in Chicago, where they reunite with Ben’s family and make some new friends.
+                                        They reunite with Ben’s family in Chicago to witness Ben's cousin, Seth, marry his beautiful partner Melissa in a gorgeous ceremony.
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -215,10 +215,10 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
-                                    <h2 class="post-title bold">August 2017</h2>
+                                    <h3 class="post-title bold">August 2017</h3>
                                     <div class="post-bottom overflow">
                                         <span class="post-date pull-left">Relaxing on a floating dock after a swim in Lake George, Ben surprises Cola by proposing. They had been talking about it long enough!</span>
                                     </div>
@@ -226,7 +226,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -236,7 +236,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -246,7 +246,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-6 padding-top post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
