--- a/password-protected.html
+++ b/password-protected.html
@@ -429,7 +429,7 @@
                 </div>
                 <div class="map-text">
                     <div>
-                        <h2>Ben & Cola are Getting Married!</h2>
+                        <h2>Celebrate with Us!</h2>
                         <p>Ceremony at 5:30pm</p>
                         <p>September 23, 2018</p>
                         <p>The Boathouse at Prospect Park</p>
