--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
 
                     <div class="timeline-divider overflow padding-bottom">
-                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -61,7 +61,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -71,7 +71,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -81,7 +81,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <h3 class="post-title bold">April 2015</h3>
@@ -92,7 +92,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -102,7 +102,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -112,7 +112,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <h3 class="post-title bold">November 2015</h3>
@@ -123,7 +123,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -133,7 +133,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8 post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8 post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -154,7 +154,7 @@
                     </div>
 
                     <div class="timeline-divider overflow padding-bottom">
-                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -164,7 +164,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -174,7 +174,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -184,7 +184,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <h3 class="post-title bold">May 2017</h3>
@@ -195,7 +195,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8 post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8 post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -205,7 +205,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -215,7 +215,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <h3 class="post-title bold">August 2017</h3>
@@ -226,7 +226,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -236,7 +236,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
@@ -246,7 +246,7 @@
                             </div>
                         </div>
 
-                        <div class="col-sm-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
+                        <div class="col-xs-8 post wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
                                     <div class="post-bottom overflow">
