hide full width images on mobile and replace with normal timeline elements

--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
 <body>
     <section>
         <div class="container">
-            <div class="row padding-bottom intro-image">
+            <div class="row intro-image">
                 <img src="images/adventures-of-ben-and-cola.png" class="img-responsive center-block">
                 <div class="skip-intro">
                     <a href="inside.html">Skip Intro</a>
                 </div>
+                <div class="timeline-divider overflow padding-bottom"></div>
             </div>
         </div>
     </section>
@@ -42,7 +43,7 @@
         <div class="container">
             <div class="row">
                 <div class="timeline-blog overflow">
-                    <div class="overflow full-width-divider">
+                    <div class="overflow full-width-divider hidden-xs">
                         <img src="images/Cabin_All_Layers.png" class="img-responsive center-block">
                         <div>
                             <h2>December 2014 </h2>
@@ -51,6 +52,17 @@
                     </div>
 
                     <div class="timeline-divider overflow padding-bottom">
+                        <div class="col-xs-8 post wow fadeInRight visible-xs" data-wow-duration="1000ms" data-wow-delay="300ms">
+                            <div class="single-blog timeline">
+                                <div class="post-content overflow">
+                                    <h3 class="post-title bold">December 2014</h3>
+                                    <div class="post-bottom overflow">
+                                        Fate and a lot of snow first brought Ben and Cola together. Assigned to the same cabin for a snowboarding meetup, these strangers discovered that they were Brooklyn neighbors.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="col-xs-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
@@ -145,7 +157,7 @@
                     </div>
                 </div>
                 <div class="timeline-blog overflow">
-                    <div class="overflow full-width-divider">
+                    <div class="overflow full-width-divider hidden-xs">
                         <img src="images/Chihiro_AllLayers.png" class="img-responsive center-block">
                         <div>
                             <h2>December 2016 </h2>
@@ -154,6 +166,17 @@
                     </div>
 
                     <div class="timeline-divider overflow padding-bottom">
+                        <div class="col-xs-8 post wow fadeInRight visible-xs" data-wow-duration="1000ms" data-wow-delay="300ms">
+                            <div class="single-blog timeline">
+                                <div class="post-content overflow">
+                                    <h3 class="post-title bold">December 2016</h3>
+                                    <div class="post-bottom overflow">
+                                        A friend they had dog-sat for called saying they just couldn’t take care of their puppy anymore. Ben & Cola already loved this puppy and happily added Chihiro to their adventuring family.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="col-xs-8  post wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
                             <div class="single-blog timeline">
                                 <div class="post-content overflow">
@@ -255,9 +278,20 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="col-xs-8 post wow fadeInLeft visible-xs" data-wow-duration="1000ms" data-wow-delay="300ms">
+                            <div class="single-blog timeline">
+                                <div class="post-content overflow">
+                                    <h3 class="post-title bold">Now</h3>
+                                    <div class="post-bottom overflow">
+                                        <span class="post-date pull-left">Whether it's a 15 hour flight to Japan, or a 15 minute walk to Prospect Park, Ben and Cola love to share amazing adventures. Now they’re excited to start their next adventure together, and they hope you can join them as they embark on their next journey.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
-                    <div class="overflow full-width-divider">
+                    <div class="overflow full-width-divider hidden-xs">
                         <img src="images/Boathouse_AllLayers.png" class="img-responsive center-block">
                         <div>
                             <h2>Now</h2>
