updated photo of lissa, fixed map on mobile

--- a/password-protected.html
+++ b/password-protected.html
@@ -31,12 +31,12 @@
                 <div class="main-slider">
                     <div class="col-md-12 private-nav">
                         <img src="images/private-nav.png" class="img-responsive center-block">
-                        <div class="left-nav">
+                        <div class="left-nav visible-lg">
                             <a href="#features">RSVP</a>
                             <a href="#faq">FAQ</a>
                             <a href="#team">WHO'S WHO</a>
                         </div>
-                        <div class="right-nav">
+                        <div class="right-nav visible-lg">
                             <a href="#services">WHERE & WHEN</a>
                             <a href="#end">PHOTOS</a>
                         </div>
@@ -420,7 +420,7 @@
             <div class="row">
                 <div>
                     <iframe
-                            width="600"
+                            width="60%"
                             height="450"
                             frameborder="0" style="border:0"
                             src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCfn9Ruuh-tDjwzXVTaQRkjvhEkY5XH65c&q=Prospect+Park+Boathouse,Brooklyn+NY"
