added photos to slideshow, changed slideshow arrows for wedding party

--- a/password-protected.html
+++ b/password-protected.html
@@ -406,9 +406,15 @@
                         </div>
                     </div>
 
-                    <!-- Controls -->
-                    <a class="left team-carousel-control hidden-xs" href="#team-carousel" data-slide="prev">left</a>
-                    <a class="right team-carousel-control hidden-xs" href="#team-carousel" data-slide="next">right</a>
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#team-carousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#team-carousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -447,19 +453,46 @@
         <div class="container">
             <div class="row">
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                        <li data-target="#myCarousel" data-slide-to="3"></li>
-                        <li data-target="#myCarousel" data-slide-to="4"></li>
-                    </ol>
-
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
                             <img src="images/slide-show/20171111_CoBeEShoot_0092.JPG">
+                        </div>
+
+                        <div class="item">
+                            <img src="images/slide-show/slide-show-2.jpg">
+                        </div>
+
+                        <div class="item">
+                            <img src="images/slide-show/slide-show-3.jpg">
+                        </div>
+
+                        <div class="item">
+                            <img src="images/slide-show/slide-show-4.jpg">
+                        </div>
+
+                        <div class="item">
+                            <img src="images/slide-show/slide-show-5.jpg">
+                        </div>
+
+                        <div class="item">
+                            <img src="images/slide-show/slide-show-6.jpg">
+                        </div>
+
+                        <div class="item">
+                            <img src="images/slide-show/slide-show-7.jpg">
+                        </div>
+
+                        <div class="item">
+                            <img src="images/slide-show/slide-show-8.jpg">
+                        </div>
+
+                        <div class="item">
+                            <img src="images/slide-show/slide-show-9.jpg">
+                        </div>
+
+                        <div class="item">
+                            <img src="images/slide-show/slide-show-10.jpg">
                         </div>
 
                         <div class="item">
@@ -480,11 +513,11 @@
                     </div>
 
                     <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <a class="left carousel-control insideimage" href="#myCarousel" data-slide="prev">
                         <span class="glyphicon glyphicon-chevron-left"></span>
                         <span class="sr-only">Previous</span>
                     </a>
-                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <a class="right carousel-control insideimage" href="#myCarousel" data-slide="next">
                         <span class="glyphicon glyphicon-chevron-right"></span>
                         <span class="sr-only">Next</span>
                     </a>
