switched timeline header to svg

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section>
         <div class="container">
             <div class="row intro-image">
-                <img src="images/adventures-of-ben-and-cola.png" class="img-responsive center-block">
+                <img src="images/Timeline-Banner-New.svg" class="img-responsive center-block">
                 <div class="skip-intro">
                     <a href="inside.html">Skip Intro</a>
                 </div>
