changed skip intro to guest login

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="row intro-image">
                 <img src="images/Timeline-Banner-New.svg" class="img-responsive center-block">
                 <div class="skip-intro">
-                    <a href="inside.html">Skip Intro</a>
+                    <a href="inside.html">Guest Login</a>
                 </div>
                 <div class="timeline-divider overflow padding-bottom"></div>
             </div>
