--- a/inside.html
+++ b/inside.html
@@ -30,14 +30,16 @@
     <section id="private">
         <div class="container">
             <div class="row">
-                <img src="images/modal.png" class="img-responsive center-block padding-top">
+                <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-lg-6 col-lg-offset-3">
+                    <img src="images/Envelope_Modal_new.svg" class="img-responsive center-block padding-top">
 
-                <div id="passwordForm">
-                    <form onsubmit="return false;">
-                        <label></label>
-                        <input type="password" id="password" type="text">
-                        <button id="formBtn" class="btn btn-primary">ENTER</button>
-                    </form>
+                    <div id="passwordForm">
+                        <form onsubmit="return false;">
+                            <label></label>
+                            <input type="password" id="password" type="text">
+                            <button id="formBtn" class="btn btn-primary">ENTER</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
