--- a/password-protected.html
+++ b/password-protected.html
@@ -26,11 +26,11 @@
 
 <body>
     <section id="bandc">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="main-slider">
                     <div class="col-md-12 private-nav">
-                        <img src="images/private-nav.png" class="img-responsive center-block">
+                        <img src="images/private-nav.png" class="img-responsive center-block" style="padding-top: 20px">
                         <div class="left-nav visible-lg">
                             <a href="#features">RSVP</a>
                             <a href="#faq">FAQ</a>
@@ -53,7 +53,7 @@
     <!--/#features-->
 
     <section id="faq">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row text-center">
                 <div class="col-sm-12 padding-bottom-small">
                     <h1>FAQ</h1>
@@ -172,7 +172,7 @@
     <!--/#faq-->
 
     <section id="team">
-        <div class="container team">
+        <div class="container-fluid team">
             <div class="row">
                 <h1 class="title text-center wow fadeInDown" data-wow-duration="500ms" data-wow-delay="300ms">Who's who?</h1>
                 <p class="text-center wow fadeInDown" data-wow-duration="400ms" data-wow-delay="400ms">A lot of people came together to make this happen.</p>
@@ -422,7 +422,7 @@
     <!--/#team-->
 
     <section id="services">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div>
                     <iframe
@@ -450,13 +450,13 @@
     <!--/#services-->
 
     <section id="end">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img src="images/slide-show/20171111_CoBeEShoot_0092.JPG">
+                            <img src="images/slide-show/slide-show-1.jpg">
                         </div>
 
                         <div class="item">
@@ -496,19 +496,11 @@
                         </div>
 
                         <div class="item">
-                            <img src="images/slide-show/20171111_CoBeEShoot_0178.JPG">
+                            <img src="images/slide-show/slide-show-11.jpg">
                         </div>
 
                         <div class="item">
-                            <img src="images/slide-show/20171111_CoBeEShoot_0253.JPG">
-                        </div>
-
-                        <div class="item">
-                            <img src="images/slide-show/20171111_CoBeEShoot_0389.JPG">
-                        </div>
-
-                        <div class="item">
-                            <img src="images/slide-show/20171111_CoBeEShoot_0397.JPG">
+                            <img src="images/slide-show/slide-show-12.jpg">
                         </div>
                     </div>
 
