--- a/password-protected.html
+++ b/password-protected.html
@@ -54,7 +54,7 @@
 
     <section id="faq">
         <div class="container-fluid">
-            <div class="row text-center">
+            <div class="row text-center padding-top">
                 <div class="col-sm-12 padding-bottom-small">
                     <h1>FAQ</h1>
                     <p>Some things you might want to know</p>
@@ -172,7 +172,7 @@
     <!--/#faq-->
 
     <section id="team">
-        <div class="container-fluid team">
+        <div class="container-fluid team padding-top">
             <div class="row">
                 <h1 class="title text-center wow fadeInDown" data-wow-duration="500ms" data-wow-delay="300ms">Who's who?</h1>
                 <p class="text-center wow fadeInDown" data-wow-duration="400ms" data-wow-delay="400ms">A lot of people came together to make this happen.</p>
@@ -426,7 +426,7 @@
             <div class="row">
                 <div>
                     <iframe
-                            width="60%"
+                            width="70%"
                             height="450"
                             frameborder="0" style="border:0"
                             src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCfn9Ruuh-tDjwzXVTaQRkjvhEkY5XH65c&q=Prospect+Park+Boathouse,Brooklyn+NY"
