--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
     <section>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row intro-image">
                 <img src="images/Timeline-Banner-New.svg" class="img-responsive center-block">
                 <div class="skip-intro">
