added padding to faq and whos who

--- a/password-protected.html
+++ b/password-protected.html
@@ -53,7 +53,7 @@
     <!--/#features-->
 
     <section id="faq">
-        <div class="container-fluid">
+        <div class="container-fluid padding-left padding-right">
             <div class="row text-center padding-top">
                 <div class="col-sm-12 padding-bottom-small">
                     <h1>FAQ</h1>
@@ -172,7 +172,7 @@
     <!--/#faq-->
 
     <section id="team">
-        <div class="container-fluid team padding-top">
+        <div class="container-fluid team padding-top padding-right padding-left">
             <div class="row">
                 <h1 class="title text-center wow fadeInDown" data-wow-duration="500ms" data-wow-delay="300ms">Who's who?</h1>
                 <p class="text-center wow fadeInDown" data-wow-duration="400ms" data-wow-delay="400ms">A lot of people came together to make this happen.</p>
