fixed width on password form

--- a/inside.html
+++ b/inside.html
@@ -36,7 +36,7 @@
                         <div id="passwordForm" class="input-group input-group-sm">
                             <input type="password" id="password" class="form-control">
                             <span class="input-group-btn">
-                                <button id="formBtn" class="btn btn-primary" type="button">ENTER</button>
+                                <button id="formBtn" class="btn btn-primary" type="button">GO</button>
                             </span>
                         </div>
                     </form>
