adding parking address, fixed enter not submitting password form

--- a/password-protected.html
+++ b/password-protected.html
@@ -73,7 +73,7 @@
                         <p>Dinner at 7:00pm</p>
                         <p>Party ‘till 10:30pm</p>
                         <p><a target="_blank" href = "https://www.google.com/maps/place/Prospect+Park+Audubon+Center/@40.6608255,-73.9674331,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b13d59e44bb:0x4374a72cee20ff31!8m2!3d40.6608215!4d-73.9652444">101 East Dr, Brooklyn, NY 11225</a></p>
-                        <p>Parking available nearby</p>
+                        <p>Parking at 440 Flatbush Ave., Brooklyn, NY, 11225</p>
                     </div>
                 </div>
                 <div class="col-sm-4 text-center padding-bottom wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
