added incorrect password notification

--- a/inside.html
+++ b/inside.html
@@ -39,6 +39,9 @@
                                 <button id="formBtn" class="btn btn-primary" type="button">GO</button>
                             </span>
                         </div>
+                        <div id="errorDiv">
+                            <div id="innerErrorDiv"></div>
+                        </div>
                     </form>
                 </div>
             </div>
@@ -55,6 +58,7 @@
     </div>
 
     <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/lightbox.min.js"></script>
     <script type="text/javascript" src="js/wow.min.js"></script>
