added text to hashtag section, fixed fairfield link

--- a/password-protected.html
+++ b/password-protected.html
@@ -107,7 +107,7 @@
                         </div>
                         <h2>Where Should I Stay?</h2>
                         <p>We’ve held blocks of rooms for a discounted rate at three hotels. The Farfield and Nu Hotels include breakfast and parking available nearby. These rooms will be available to reserve until July 21, 2018 - or until they are all booked, so reserve now: just mention that you are part of the Hodges/Solwitz wedding!</p>
-                        <p><a target="_blank" href="http://cwp.marriott.com/nycbf/shw">The Fairfield Inn Brooklyn</a></p>
+                        <p><a target="_blank" href="https://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=SOLWITZ-HODGES%20WEDDING%5Enycbf%60SOLSOLA%7CSOLSOLB%60199.00-239.00%60USD%60false%604%609/21/18%609/24/18%6007/21/2018&app=resvlink&stop_mobi=yes">The Fairfield Inn Brooklyn</a></p>
                         <p><a target="_blank" href="https://nuhotelbrooklyn.reztrip.com/ext/promoRate?property=417&mode=b&pm=true&sr=287631&vr=3">The Nu Hotel</a></p>
                         <p><a target="_blank" href="https://aws.passkey.com/go/HodgesWeddingRoomBlock">The Marriott at Brooklyn Bridge</a></p>
                     </div>
@@ -153,7 +153,8 @@
                             <img src="images/hash.png" alt="">
                         </div>
                         <h2>What’s the Hashtag?!</h2>
-                        <p><a target="_blank" href="https://www.instagram.com/explore/tags/benandcolasolit/">#BenAndColaSoLit</a></p>
+                        <p>Please put your phones away during the ceremony (our photographer is bomb, he's got it). But at the reception, 'gram away!</p>
+                        <p><a target="_blank" style="font-weight: bold" href="https://www.instagram.com/explore/tags/benandcolasolit/">#BenAndColaSoLit</a></p>
                     </div>
                 </div>
 
