--- a/password-protected.html
+++ b/password-protected.html
@@ -73,7 +73,7 @@
                         <p>Dinner at 7:00pm</p>
                         <p>Party ‘till 10:30pm</p>
                         <p><a target="_blank" href = "https://www.google.com/maps/place/Prospect+Park+Audubon+Center/@40.6608255,-73.9674331,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b13d59e44bb:0x4374a72cee20ff31!8m2!3d40.6608215!4d-73.9652444">101 East Dr, Brooklyn, NY 11225</a></p>
-                        <p>Parking at 440 Flatbush Ave., Brooklyn, NY, 11225</p>
+                        <p>Parking at <a href="https://goo.gl/maps/BJw7rfY4xz52">440 Flatbush Ave., Brooklyn, NY, 11225</a></p>
                     </div>
                 </div>
                 <div class="col-sm-4 text-center padding-bottom wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
@@ -82,7 +82,7 @@
                             <img src="images/tie.png" alt="">
                         </div>
                         <h2>What Should I Wear?</h2>
-                        <p>Cocktail Attire is Prefered</p>
+                        <p>Cocktail Attire is Preferred</p>
                         <p>Skip the tux, cocktail attire calls for a dark suit with a tie, a dress, or dressy separates that are party-ready. Have some fun with jewelry—or, if you'd rather wear color, opt for something bright!</p>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                             <img src="images/glasses.png" alt="">
                         </div>
                         <h2>Rehearsal Dinner at Berg’n</h2>
-                        <p>Please join us for dinner at 6:00pm on September 22nd at  Berg’n</p>
+                        <p>We hope you'll join us for a pre-wedding dinner <br/> at 6:00p.m. on September 22nd,<br/> hosted by Richard Solwitz & Kim Brustoski</p>
                         <p>Have a beer and get to know our closest friends, we think you’ll all get along fabulously. Dinner will be served casual cocktail style so you can  get to know to everyone.</p>
                         <p><a target="_blank" href="https://www.google.com/maps/place/Berg'n/@40.6772614,-73.9593843,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25b9f2d36229d:0xcf3837638bf68bc2!8m2!3d40.6772614!4d-73.9571956">899 Bergen St, Brooklyn, NY 11238</a></p>
                     </div>
