set up layers for cabin parallax, overflow broken

--- a/index.html
+++ b/index.html
@@ -40,11 +40,17 @@
     </section>
 
     <section id="blog" class="padding-bottom">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="timeline-blog overflow">
-                    <div class="overflow full-width-divider hidden-xs">
-                        <img src="images/Cabin_All_Layers.png" class="img-responsive center-block">
+                    <div class="overflow full-width-divider hidden-xs" id="cabin">
+                        <div id="cabin-layer-06" data-depth="1"></div>
+                        <div id="cabin-layer-05" data-depth="0.85"></div>
+                        <div id="cabin-layer-04" data-depth="0.8"></div>
+                        <div id="cabin-layer-03" data-depth="0.5"></div>
+                        <div id="cabin-layer-02" data-depth="0.2"></div>
+                        <div id="cabin-layer-01" data-depth="0.1"></div>
+
                         <div>
                             <h2>December 2014 </h2>
                             <p>Fate and a lot of snow first brought Ben and Cola together. Assigned to the same cabin for a snowboarding meetup, these strangers discovered that they were Brooklyn neighbors.</p>
@@ -315,5 +321,6 @@
     <script type="text/javascript" src="js/lightbox.min.js"></script>
     <script type="text/javascript" src="js/wow.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/parallax.js"></script>
 </body>
 </html>
