added parallax to chihiro, uploaded larger boathouse, made parallax text overlays narrower

--- a/index.html
+++ b/index.html
@@ -163,8 +163,13 @@
                     </div>
                 </div>
                 <div class="timeline-blog overflow">
-                    <div class="overflow full-width-divider hidden-xs">
-                        <img src="images/Chihiro_AllLayers.png" class="img-responsive center-block">
+                    <div class="overflow full-width-divider hidden-xs" id="chihiro">
+                        <div id="chihiro-layer-05" data-depth="0"></div>
+                        <div id="chihiro-layer-04" data-depth="0.3"></div>
+                        <div id="chihiro-layer-03" data-depth="1.4"></div>
+                        <div id="chihiro-layer-02" data-depth="1"></div>
+                        <div id="chihiro-layer-01" data-depth="0.7"></div>
+
                         <div>
                             <h2>December 2016 </h2>
                             <p>A friend they had dog-sat for called saying they just couldn’t take care of their puppy anymore. Ben & Cola already loved this puppy and happily added Chihiro to their adventuring family.</p>
