updated attire text, swapped tie png for fascinator

--- a/password-protected.html
+++ b/password-protected.html
@@ -79,10 +79,10 @@
                 <div class="col-sm-4 text-center padding-bottom wow fadeIn" data-wow-duration="1000ms" data-wow-delay="600ms">
                     <div class="single-service">
                         <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="600ms">
-                            <img src="images/tie.png" alt="">
+                            <img src="images/fascinator.png" alt="">
                         </div>
                         <h2>What Should I Wear?</h2>
-                        <p>Cocktail Attire is Preferred</p>
+                        <p>Cocktail attire is preferred and hats are highly encouraged</p>
                         <p>Skip the tux, cocktail attire calls for a dark suit with a tie, a dress, or dressy separates that are party-ready. Have some fun with jewelry—or, if you'd rather wear color, opt for something bright!</p>
                     </div>
                 </div>
