initial animation for boathouse

--- a/index.html
+++ b/index.html
@@ -302,8 +302,11 @@
                         </div>
                     </div>
 
-                    <div class="overflow full-width-divider hidden-xs">
-                        <img src="images/Boathouse_AllLayers.png" class="img-responsive center-block">
+                    <div class="overflow full-width-divider hidden-xs" id="boathouse">
+                        <div id="boathouse-layer-03" data-depth="0.3"></div>
+                        <div id="boathouse-layer-02" data-depth="0.7"></div>
+                        <div id="boathouse-layer-01" data-depth="1"></div>
+
                         <div>
                             <h2>Now</h2>
                             <p>Whether it's a 15 hour flight to Japan, or a 15 minute walk to Prospect Park, Ben and Cola love to share amazing adventures. Now they’re excited to start their next adventure together, and they hope you can join them as they embark on their next journey.</p>
